--- a/composer.json
+++ b/composer.json
@@ -22,21 +22,28 @@
         "yiisoft/yii2-jui": "*",
         "evgeniyrru/yii2-slick": "*",
         "yiisoft/yii2-imagine": "^2.0",
-        "alexandernst/yii2-device-detect": "*"
+        "alexandernst/yii2-device-detect": "*",
+        "yiisoft/yii2-debug": "^2.0"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+        "codeception/base": "^2.2.3",
+        "codeception/verify": "~0.3.1"
     },
     "config": {
         "process-timeout": 1800
     },
     "extra": {
-        "asset-installer-paths": {
+        "fxp-asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
