--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "vova07/yii2-imperavi-widget": "*",
+        "vova07/yii2-imperavi-widget": "<=2.0.5",
         "yiisoft/yii2-jui": "*",
         "evgeniyrru/yii2-slick": "*",
         "yiisoft/yii2-imagine": "^2.0",
