--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "evgeniyrru/yii2-slick": "*",
         "yiisoft/yii2-imagine": "^2.0",
         "alexandernst/yii2-device-detect": "*",
-        "yiisoft/yii2-debug": "^2.0"
+        "yiisoft/yii2-debug": "^2.0",
+        "yiisoft/yii2-bootstrap4": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-gii": "*",
